--- a/WorkoutPlan/WorkoutPlan.API/appsettings.json
+++ b/WorkoutPlan/WorkoutPlan.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Persistence": {
+    "ConnectionString": "User ID=postgres;Password=r061m;Host=localhost;Port=5432;Database=trackerdb;TrustServerCertificate=true;"
+  },
+  "Messaging": {
+    "Host": "localhost",
+    "User": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
