Configuring MQ endpoints

--- a/WorkoutPlan/WorkoutPlan.Service/appsettings.json
+++ b/WorkoutPlan/WorkoutPlan.Service/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Messaging": {
+    "Host": "localhost",
+    "User": "guest",
+    "Password": "guest"
+  }
 }
