--- a/WorkoutPlan/WorkoutPlan.Domain/WorkoutPlan.Domain.csproj
+++ b/WorkoutPlan/WorkoutPlan.Domain/WorkoutPlan.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Light.GuardClauses" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
