--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 *.user
 /WorkoutPlan/WorkoutPlan.Domain.UnitTest/bin/Debug/net6.0
 /WorkoutPlan/WorkoutPlan.Domain.UnitTest/obj
+/WorkoutPlan/.idea/.idea.WorkoutPlan/.idea
